# nvoc

./: .gitignore  AppRun  LICENSE  README.md  build-appimage.sh  install.sh  pyproject.toml  requirements.txt
data/: com.github.nvoc.policy  nvoc.desktop
nvoc/: __init__.py  config.py  helper.py  main.py  narratives.py  nvml_controller.py  privileged_controller.py  profiles.py  window.py
nvoc/ui/: __init__.py  dashboard.py  fans.py  overclock.py  profiles_view.py  settings.py  stress.py
systemd/: nvoc-apply.service
