[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvoc"
version = "0.1.0"
description = "NVIDIA GPU Overclocking for Wayland"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NVOC Contributors"}
]
requires-python = ">=3.10"
keywords = ["nvidia", "gpu", "overclock", "wayland", "gtk4", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
]
dependencies = [
    "nvidia-ml-py>=12.0.0",
    "PyGObject>=3.42.0",
]

[project.urls]
Homepage = "https://github.com/nvoc/nvoc"
Repository = "https://github.com/nvoc/nvoc"
Issues = "https://github.com/nvoc/nvoc/issues"

[project.scripts]
nvoc = "nvoc.main:main"

[project.gui-scripts]
nvoc-gui = "nvoc.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nvoc*"]

[tool.setuptools.package-data]
nvoc = ["*.py"]
